--- a/run/var.conf
+++ b/run/var.conf
@@ -21,8 +21,8 @@ declare CORECTfORMAT='rtcm3'
 
 
 #INPUT
-declare INPTYPE='tcpcli' 	#tcp #serialshutdown
-declare INPPATH=':@localhost:8080:'    #ttyACM0:115200:8:n:1:off #:@localhost:8080:
+declare INPTYPE='serial' 	#tcp #serialshutdown
+declare INPPATH='ttyACM0:115200:8:n:1:off'    #ttyACM0:115200:8:n:1:off #:@localhost:8080:
 
 #OUTPUT
-declare OUTPATH='/storage/internal/gnss/solutions/'    #/storage/internal/gnss/solutions/ android  ./solution/ PC
+declare OUTPATH='./solution/'    #/storage/internal/gnss/solutions/ android  ./solution/ PC
