Update npm package install

--- a/nodejs/read_status_reveiver/package.json
+++ b/nodejs/read_status_reveiver/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "status.js",
   "scripts": {
-    "test": "node status.js"
+    "start": "node status.js"
   },
   "repository": {
     "type": "git",
