add param for ardusimple F9P

--- a/run/var.conf
+++ b/run/var.conf
@@ -11,6 +11,9 @@ declare BDS=1
 declare QZSS=1
 declare GLO=1
 
+#USB or UART1
+declare USBUART='UART1'
+
 #Caster
 declare CASTERADDR='caster.centipede.fr'
 declare CASTERPORT=2101
@@ -21,8 +24,8 @@ declare CORECTfORMAT='rtcm3'
 
 
 #INPUT
-declare INPTYPE='serial' 	#tcp #serialshutdown
-declare INPPATH='ttyACM0:115200:8:n:1:off'    #ttyACM0:115200:8:n:1:off #:@localhost:8080:
+declare INPTYPE='serial # PC Ardusimple' 	#tcp #serialshutdown
+declare INPPATH='ttyUSB0:115200:8:n:1:off'    #ttyACM0:115200:8:n:1:off #:@localhost:8080:
 
 #OUTPUT
-declare OUTPATH='./solution/'    #/storage/internal/gnss/solutions/ android  ./solution/ PC
+declare OUTPATH=''    #/storage/internal/gnss/solutions/ android  ./solution/ PC
