--- a/source/functions.conf
+++ b/source/functions.conf
@@ -11,7 +11,8 @@ Param () {
     echo "Rate: ${RATE} ms"
     echo "Model: ${listModel[$DYNMODEL]}"
     echo "Elevation: ${MINELEV[$listModel]}°"
-    echo "Input: ${INPTYPE} ${INPPATH}"
+    echo "Input Path: ${INPTYPE} ${INPPATH}"
+    echo "Type Connexion: ${USBUART}"
     echo "Output Path logs: ${OUTPATH}"
     echo "caster: ${CASTERADDR}:${CASTERPORT} ${CORECTfORMAT}"
     echo "Mount Point: ${MP}"
@@ -23,6 +24,34 @@ Param () {
     echo "------------------"
 }
 #Receiver connection
+usbuart (){
+while :
+do 
+  echo ""
+  echo "Change ${listUsbUart[$USBUART]}: ${USBUART} to:"
+  echo ""
+  for i in "${!listUsbUart[@]}"
+   do
+    num=$i
+    value=${listUsbUart[$i]}
+    echo "$value : $num"
+  done
+  OLDUSBUART=${USBUART}
+  read answer
+  if [ -z "${answer}" ]
+	then USBUART=${OLDUSBUART}
+	else
+	 for i in "${!listUsbUart[@]}"
+   	 do
+	   if [ ${listUsbUart[$i]} == ${answer} ]
+	   then USBUART="$i"
+           fi
+ 	 done		
+  fi
+  eval "echo \"$(< $VAR_VAR_FILE)\"" > $VAR_FILE
+  return
+done
+}
 input (){
 while :
 do 
