--- a/source/list.conf
+++ b/source/list.conf
@@ -25,13 +25,20 @@ listON=(
 )
 declare -A listInput
 listInput=(
-	[tcpcli]=1
-	[serial]=2
+	[tcpcli # Android]=1
+	[serial # PC Drotek]=2
+	[serial # PC Ardusimple]=3
 )
 declare -A listPathInput
 listPathInput=(
-	[tcpcli]=':@localhost:8080:'
-	[serial]='ttyACM0:115200:8:n:1:off'
+	[tcpcli # Android]=':@localhost:8080:'
+	[serial # PC Drotek]='ttyACM0:115200:8:n:1:off'
+	[serial # PC Ardusimple]='ttyUSB0:115200:8:n:1:off'
+)
+declare -A listUsbUart
+listUsbUart=(
+	[USB]=1
+	[UART1]=2
 )
 declare -A listPathOutput
 listPathOutput=(
