--- a/var/var_var.conf
+++ b/var/var_var.conf
@@ -11,6 +11,9 @@ declare BDS=${BDS}
 declare QZSS=${QZSS}
 declare GLO=${GLO}
 
+#USB or UART1
+declare USBUART='${USBUART}'
+
 #Caster
 declare CASTERADDR='${CASTERADDR}'
 declare CASTERPORT=${CASTERPORT}
